# chat-app

./: .bazelrc  .gitignore  MODULE.bazel  README.md
client/: BUILD.bazel  a  app.cpp  app.h  client.cpp  client.h  client_parser.cpp  client_parser.h
client/tests/: client_parser_test.cpp
common/: BUILD.bazel  common.h  packet.proto
console/: BUILD.bazel  console.cpp  console.h
protobuf-tutorial/: BUILD.bazel  addressbook.pb.cc  addressbook.pb.h  addressbook.proto  my_file.txt  read_message.cpp  write_message.cpp
server/: BUILD.bazel  database.cpp  database.h  server.cpp  server.h  server_app.cpp  server_state.cpp  server_state.h
tcp_lib/: BUILD.bazel  client_socket.h  server_socket.h  socket.h  tcp_server.h  tcp_util.h
