cc_library(
    name = "client",
    srcs = ["client.cpp"],
    hdrs = ["client.h"],
    deps = [
        "//common",
    ]
)

cc_library(
    name = "client_parser",
    srcs = ["client_parser.cpp", "client_parser.h"],
    deps = ["//common:packet_cc_proto",],
)

cc_binary(
    name = "app",
    srcs = ["app.cpp", "app.h"],
    deps = [
        ":client",
        "//console",
        "//common",
        "//tcp_lib:socket",
    ],
)