cc_library(
    name = "common",
    hdrs = ["common.h"],
    visibility = [
        "//visibility:public",
    ]
)

proto_library(
    name = "packet_proto",
    srcs = ["packet.proto"],
)

cc_proto_library(
    name = "packet_cc_proto",
    deps = [":packet_proto"],
    visibility = [
        "//client:__subpackages__",
        "//server:__subpackages__",]
)

